--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "sass": "^1.71.1",
